# honyaku

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-pr.yaml  python-tox.yaml
honyaku/: cli.py
license/: LICENSE.txt
tests/: test_cli.py
