[metadata]
name = honyaku
version = attr: honyaku.__version__
description = Translate po-files using Gengo.com
long_description = file: README.rst, HISTORY.rst
url = http://github.com/seantis/honyaku
author = Seantis GmbH
author_email = info@seantis.ch
license = GPLv2
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
include_package_data = True
zip_safe = False
packages =
    honyaku
python_requires = >=3.7
install_requires =
    click
    gengo
    polib

[options.extras_require]
test =
    coverage[toml]
    pre-commit
    pytest
    pytest-cov
    tox

[options.entry_points]
console_scripts =
    honyaku=honyaku.cli:cli

[bdist_wheel]
universal=1
